--- a/trabajo/proyecto/index.html
+++ b/trabajo/proyecto/index.html
@@ -1,27 +1,57 @@
-<DOCTIPE html>
-<html>
-<head>
-    <title>mi primera pagina en repositorio</title>
-    <link Rel=stylesheet HEREF="proyecto/css/style.css" TYPE="text/css" MEDIA=screen>
-</head>    
-<body bgcolor="pink"  text="black">
-<center><img src="C:\trabajo\proyecto\tools\jess.jpg"  width="400"
-     height="341"  aling="rigth"></center>
+<HTML>
+<Head>
+ <title>Ropa de segunda</title>
+ <style type="text/css">
+  body{
+  background-color: mediumpurple;  
 
-     <h1 aling="center"> curriculum vitae</h1>
-     <h1 aling="center"> Jesika Siomara Us Zapeta</h1>
-     <h2 aling="center"> Bachillerato en computación</h2>
-     <h3 aling="center"> DPI:1557 34652 0101</h3>
-     <h6 aling="center"> 8va calle 12-30 zona 1, villa nueva tel. 40036353 email. jesika16us@gmail.com</h6>
+  }
+ #Navegador ul{
+ list-style-type: none;
+ text-aling: center
+ }
+ #Navegador li{
+ dysplay: inline;
+ text-aling center;
+ margin: 0 10px 00;
+
+ }
+ #Navegador li a{
+ 	padding: 2px 7px 2px 7px;
+ 	color: pink;
+ 	backaground-color: black;
+ 	        border 1px solid: #cccc;
+ 	        text-decoration none;
+ } 
+ #Navegador li a {
+ 	background-color: pink;
+ 	color: black;
+ }
+ p{
+ 	font-kerning: 
+ }
 
 
-     <ul class="navbar">
-     <li><a href="Indice.html">Principal</a></li>
-     <li><a href="Estudios.html">Estudios efectuados</a></li>
-     <li><a href="Explab.html">Experiencia laboral</a></li>
-     <li><a href="Referencias.html">Referencia laboral</a></li>
-     </ul>
-     <p> hoja de vida 2003-2021 hecha desde Villa Nueva, Guatemala</p>
+  </style>
 
-     </body>
-     </html>
+</Head>
+
+<body>
+    
+
+    <hear aling="center">
+
+        <div id="Navegador">
+            <ul>
+                <li><a href="index.html">Presentacion</a></li> 
+                <li><a href="prendas.html">Prendas</a></li>
+                <li><a href="contactanos.html">Contactanos</a></li>
+            </ul>
+            <h1><center><b>Closet_GT/ ROPA DE SEGUNDA MANO <3</b></center></h1>
+                <p><center><b>Nuestra mision es llevar ropa de calidad a nuestros clientes</b></center></p>
+                <p><center><b>En close gt encontaras la mejor ropa carteras e incluso zapatos a un precio sueper accesible</b></center></p>
+                <center><img src="https://images-platform.99static.com/TGtkZhaFmh0TfDJoDXeqak5VM0E=/0x0:2002x2002/500x500/top/smart/99designs-contests-attachments/87/87330/attachment_87330781"><width="300"></center>
+                    <footer>derechos reservados/creado por Jesika Us</footer>
+
+</body>
+</html>
